add search to news

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <meta name="description" content="Bako Store - Mua cuốn Manga/LN yêu thích của bạn tại nhà.">
     <meta name="robots" content="index,follow">
+    <meta name="google-site-verification" content="TlpKlklE-tJojiWKyElqqjebVm_JlHW0GZoNvJQfATs" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
